добавил календарик на доске объявлений

--- a/WebSite/Web/Styles/shared/controls.less
+++ b/WebSite/Web/Styles/shared/controls.less
@@ -77,3 +77,12 @@
         display: none;
     }
 }
+
+.xdsoft_datetimepicker {
+    border: 0;
+    padding: 0;
+
+    .xdsoft_datepicker {
+        margin: 0;
+    }
+}
