--- a/WebSite/Web/Styles/animal-list.less
+++ b/WebSite/Web/Styles/animal-list.less
@@ -60,6 +60,11 @@
         text-align: center;
     }
 
+    .found-time .options {
+        padding: 10px 0;
+        text-align: center;
+    }
+
     .breed-type .search {
         border-top: 1px solid lightgray;
         padding: 5px 10px;
@@ -86,7 +91,7 @@
         border-radius: 3px;
         text-align: center;
         padding: 3px;
-        margin: 2px;
+        margin: 10px;
     }
 }
 
