todo комменты + разделил породы и цвета на кошачьи и собачьи

--- a/WebSite/Web/Styles/animal-add.less
+++ b/WebSite/Web/Styles/animal-add.less
@@ -12,6 +12,10 @@
 }
 
 #add-form {
+    .found-header, .lost-header {
+        text-align: center;
+    }
+
     form {
         .mixin-clearfix;
 
