--- a/WebSite/Web/Styles/animal-list.less
+++ b/WebSite/Web/Styles/animal-list.less
@@ -141,7 +141,6 @@
             text-align: center;
             padding-top: 40%;
             color: white;
-            text-transform: uppercase;
         }
 
         &.js-dead .foreground {
@@ -150,6 +149,10 @@
 
         &.js-sos .foreground {
             background-color: rgba(255, 0, 0, 0.50);
+        }
+
+        &.js-housing .foreground {
+            background-color: rgba(0, 161, 255, 0.50);
         }
 
         img {
