--- a/WebSite/Web/Styles/shared/controls.less
+++ b/WebSite/Web/Styles/shared/controls.less
@@ -78,11 +78,14 @@
     }
 }
 
-.xdsoft_datetimepicker {
+.xdsoft_datetimepicker.xdsoft_inline {
     border: 0;
     padding: 0;
 
     .xdsoft_datepicker {
         margin: 0;
     }
+}
+
+.chosen-container-multi .chosen-choices {
 }
