--- a/WebSite/Web/Views/Shared/_Layout.cshtml
+++ b/WebSite/Web/Views/Shared/_Layout.cshtml
@@ -8,7 +8,8 @@
     <title>@ViewBag.Title - Дай лапу</title>
     @*<link href="~/Styles/lib/normalize.css" rel="stylesheet" type="text/css" />*@
     <link href="~/Styles/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/> <!-- todo: выпилить нахуй -->
-    <link href="~/Styles/lib/jquery.datetimepicker.css" rel="stylesheet" type="text/css" />
+    <link href="~/Styles/lib/jquery.datetimepicker.css" rel="stylesheet" type="text/css"/>
+    <link href="~/Styles/lib/chosen.css" rel="stylesheet" type="text/css"/>
     <link href="~/Styles/shared/_layout.css" rel="stylesheet" type="text/css" />
     @RenderSection("Styles", false)
 </head>
@@ -60,8 +61,9 @@
 
     <script src="~/Scripts/lib/jquery-2.2.0.min.js"></script>
     <script src="~/Scripts/lib/bootstrap.min.js"></script>
-    <script src="~/Scripts/lib/knockout-3.4.0.min.js"></script>
+    <script src="~/Scripts/lib/knockout-3.4.0.js"></script>
     <script src="~/Scripts/lib/jquery.datetimepicker.min.js"></script>
+    <script src="~/Scripts/lib/chosen.jquery.min.js"></script>
 
     <script src="~/Scripts/shared/enums.js"></script>
     <script src="~/Scripts/shared/_layout.js"></script>
